[package]
name = "docsbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1"
rusqlite = "0.25.3"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_path_to_error = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
toml = "0.5.1"
url = "2.1.0"
